# velcro

./: .gitignore  CMakeLists.txt  README.md
docs/: backlog.md  grammar.txt  reference.md  todo.md
samples/: earthquake.cro  earthquake.vel  earthquake_expected.s2m  playercycle.vel  pocycle.cro  sampler.cro  sampler.vel  test.cro  timewarp.cro  timewarp.vel
scripts/: check-compiler.sh  checks.sh  release.ps1  release.sh  writebytes.sh
test/: earthquake.cro
